@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 5,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-09-25T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-26T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
