@@ -1,3 +1,11 @@
+2022-09-26T08:22:57Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3126174700
+* notice: last 14d: unq all: 5 34
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 539 / 329 572
+* notice: next accum: outdated-unq outdated-all / unq all: 311 539 / 330 573
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-26]
+
 2022-09-26T01:47:54Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3124528806
 * notice: last 14d: unq all: 5 33
